# dimension

./: .gitignore  meson.build
include/dimension/: dimension-height.hpp  dimension-millimeter.hpp  dimension-radius.hpp  dimension-width.hpp  dimension.hpp
source/: dimension-millimeter.cpp
tests/: arbitrary.hpp  meson.build  millimeter.cpp  radius.cpp
